Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente alias maxime assumenda architecto porro? Vitae nulla, ipsam distinctio hic aspernatur magnam excepturi iste! Quibusdam modi amet voluptatibus facilis molestias nam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium beatae tenetur id repellat expedita eius quaerat provident, necessitatibus voluptates nesciunt obcaecati totam doloribus corporis, odio perspiciatis nemo eaque ratione quod.</p>
 </body>
 </html>
